<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_catalog"
        android:icon="@drawable/ic_nav_catalog"
        android:title="@string/menu_catalog" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/menu_favorites" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_nav_orders"
        android:title="@string/menu_orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/menu_profile" />
</menu>
